src/test/ui/parser/keyword-struct-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py struct'

fn main() {
    let struct = "foo"; //~ error: expected pattern, found keyword `struct`
}
